k8s/prod/maps-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-northwest
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/northwest
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-northeast
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/northeast
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-southwest
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/southwest
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-southeast
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/southeast
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-creative
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/creative
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-mining
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/mining
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-maps-skylands
  namespace: gearworkssmp-com-prod
spec:
  stripPrefix:
    prefixes:
      - /maps/skylands
